--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,12 @@
 application:
   rest-template:
     timeout: 1
+  products:
+    api-url: http://products.org
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 10000
+        readTimeout: 10000
+        error-decoder: com.mariusz.orlowicz.rest.MyErrorDecoder
